--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,8 @@
 {% include "menu.html" %}
+<p style="width: 100%; text-align: center; font-size: 50px;">CATEGORIES</p>
 <div class="container">
-    
+    <div><a href="category1.html">CATEGORY ONE</a></div>
+    <div><a href="category2.html">CATEGORY TWO</a></div>
+    <div><a href="category3.html">CATEGORY THREE</a></div>
+    <div><a href="category4.html">CATEGORY FOUR</a></div>
 </div>
