database integration into html pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 {% include "menu.html" %}
 <p style="width: 100%; text-align: center; font-size: 50px;">CATEGORIES</p>
-<div class="container">
-    <div><a href="category1.html">CATEGORY ONE</a></div>
-    <div><a href="category2.html">CATEGORY TWO</a></div>
-    <div><a href="category3.html">CATEGORY THREE</a></div>
-    <div><a href="category4.html">CATEGORY FOUR</a></div>
+<form action="./category.html" method = "POST" class="container">
+    <div><input type="submit" name="button" value="category1"><p class="text">CATEGORY ONE</p></input></div>
+    <div><input type="submit" name="button" value="category2"><p class="text">CATEGORY TWO</p></input></div>
+    <div><input type="submit" name="button" value="category3"><p class="text">CATEGORY THREE</p></input></div>
+    <div><input type="submit" name="button" value="category4"><p class="text">CATEGORY FOUR</p></input></div>
 </div>
