--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,5 @@
 body {
+    overflow: hidden;
     font-family: Courier, serif;
     margin: 0;
 }
@@ -17,7 +18,7 @@ ul {
     background-color:linen;
 }
 
-li {
+ul > li {
     right: 10px;
     position: relative;
     display: block;
@@ -29,7 +30,7 @@ li {
     width: 100px;
 }
 
-li a {
+ul > li a {
     padding-top: 10px;
     padding-bottom: 10px;
     position: relative;
@@ -42,14 +43,14 @@ li a {
 
 }
 
-li a:hover {
+ul > li a:hover {
     color: #770000;
     animation-fill-mode: forwards;
     animation-name: wiggle;
     animation-duration: 0.2s;
 }
 
-li:first-child {
+ul > li:first-child {
     width: 150px;
 }
 
@@ -122,7 +123,6 @@ li:first-child {
     width: 700px;
     font-size: 30px;
     transition: box-shadow 0.3s ease;
-    
   }
 
   .container >div:first-child:hover, .container >div:nth-child(3):hover {
@@ -144,26 +144,85 @@ li:first-child {
     margin-top: 0px;
 }
 
-.container > div > a {
+.container > div > input {
+    margin: 0;
+    position: absolute;
+    border: none;
+    opacity: 0;
+    width: 100%;
+    height: 34px;
+    bottom: 30px;
+    left: 0px;
+}
+
+.container > div > p {
     position: absolute;
     text-decoration: none;
     color: #777;
     bottom: 0;
     width: 100%;
     text-align: center;
+    font-size: 30px;
+    border-color: none;
+    background-color: none;
+    z-index: -1;
 }
-.container > div > a:hover {
+.container > div > input:hover ~ .text{
     animation-name: shift-arrows;
     animation-duration: 0.4s;
     color: #770000;
+    cursor: pointer;
 }
-.container > div >a:hover:after {
+.container > div > input:hover ~ .text:after {
     position: relative;
     content: "\ >>";
     color:#770000;
     animation-name: add-arrows;
     animation-duration: 0.4s;
     left: -8px;
+}
+
+.container2 {
+    position: relative;
+    padding: 25px;
+    height: 800px;
+    margin: 30px;
+    margin-top: 10px;
+
+}
+.container2 > div {
+    background-color: #f1f1f1;
+    text-align: center;
+    font-size: 30px;
+    height: 250px;
+    margin-left: 25px;
+    margin-right: 25px;
+  }
+
+#map {
+    position: absolute;
+    height: 500px; width: 500px;
+    right: 25px;
+    bottom: 50px;
+}
+.container2 > .contact {
+    background-color: #fff;
+    top: 175px;
+    position: absolute;
+    width: 500px; 
+    height: 150px;
+    right: 25px;
+}
+
+.container2 > .contact > li {
+    text-decoration: none;
+    list-style: none;
+}
+
+.container2 > .title {
+    background-color: #fff;
+    height: 100px;
+    font-size: 50px;
 }
 
 @keyframes add-arrows {
