--- a/templates/postplace.html
+++ b/templates/postplace.html
@@ -1,4 +1,5 @@
 {% include "menu.html" %}
+<style>body {overflow: scroll;}</style>
 <form action="./postplace.html" method = "POST" class="form">
     <p>POST PLACE</p>
     <p>Id</p>
