--- a/static/css/style.css
+++ b/static/css/style.css
@@ -167,6 +167,7 @@ ul > li:first-child {
     background-color: none;
     z-index: -1;
 }
+.container > div > input:hover {cursor: pointer;}
 .container > div > input:hover ~ .text{
     animation-name: shift-arrows;
     animation-duration: 0.4s;
