--- a/templates/place.html
+++ b/templates/place.html
@@ -11,7 +11,10 @@
         <li style="font-size: 20px;"><i class="material-icons" style="font-size: 20px;">language</i> <a href="{{catalogue[0][8]}}" style="text-decoration-line: none;">{{catalogue[0][8]}}</a></li>
     </div>
     <div id="map"></div>
-    <div class="about"><p>{{catalogue[0][5]}}</p></div>
+    <div class="placecontainer">
+        <p>{{catalogue[0][5]}}</p>
+    
+    </div>
 </div>
 <body>
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.3.1/mapbox-gl-directions.js"></script>
