--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,11 @@
 body {
-    overflow: hidden;
     font-family: Courier, serif;
     margin: 0;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+.body::-webkit-scrollbar {
+    display: none;
 }
 ul {
     justify-content: right;
@@ -110,6 +114,7 @@ ul > li:first-child {
     grid-template-columns: auto auto;
     padding: 10px;
     justify-content: center;
+    overflow: visible;
   }
 .container > div {
     position: relative;
