--- a/templates/category.html
+++ b/templates/category.html
@@ -1,9 +1,12 @@
 {% include "menu.html" %}
-<p style="width: 100%; text-align: center; font-size: 50px;">{{ category }}</p>
-<form action="./place.html" method = "POST" class="container">
+<title>Restaurant Selection</title>
+<p style="width: 100%; text-align: center; font-size: 2.5vw;">{{ category }}</p> <!-- showing the relevant category/cuisine name -->
+<div class="container">
+    <!-- iterating through every restaurant in the catalogue where the "category"/cuisine is the selected one -->
     {% for place in catalogue %}
         {% if place[2]==category %}
-            <div><input type="submit" name="button" value={{place[0]}}><p class="text">{{place[1]}}</p></input></div>
+            <!-- displaying each restaurant that matches the category -->
+            <div><img src='static/images/{{images[place[0]][1]}}2.png'><a class="text" href="{{url_for('showplace', place_id=place[0])}}">{{place[1]}}</a></div>
         {% endif %}
     {% endfor %}
 </div>
