--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,12 @@
 {% include "menu.html" %}
-<form action="./" method = "POST" class="form">
+<form action="./" method = "POST" class="form"> <!-- a form to be submitted to the root page -->
     <p>SIGN IN</p>
-    <p>Email</p>
-    <p><input type = "text" name = "email" class="email" placeholder=""/></p>
+    <p>Username</p>
+    <p><input type = "text" name = "username" class="username" placeholder=""/></p>
     <p>Password</p>
     <p><input type = "password" name = "password" class="password" placeholder=""/></p>
-    <p><input type = "submit" value = "CONTINUE" name="button" class="bt1"/></p>
+    {% if error %} <!-- if there is an error passed in app.py, it will display here -->
+        <p style="color: #ff0000; text-align: center;">{{error}}</p>
+    {%endif%}
+    <p><input type = "submit" value = "CONTINUE" name="button" class="bt1"/></p> <!-- the form's submit button -->
 </form>
