--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,5 +1,5 @@
 {% include "menu.html" %}
-<form action="./" method = "POST" class="form">
+<form action="./" method = "POST" class="form"> <!-- form posting to the root page -->
     <p>SIGN UP</p>
     <p>Email</p>
     <p><input type = "text" name = "email" class="email" placeholder=""/></p>
@@ -7,5 +7,9 @@
     <p><input type = "text" name = "username" class="username" placeholder=""/></p>
     <p>Password</p>
     <p><input type = "password" name = "password" class="password" placeholder=""/></p>
+    {% if error %} <!-- if there is an error with the inputs, app.py will return an error and it will be displayed here -->
+        <p style="color: #ff0000; text-align: center;">{{error}}</p>
+    {%endif%}
+    <!-- form submition button -->
     <p><input type = "submit" value = "CREATE ACCOUNT" name="button" class="bt1"/></p>
 </form>
