--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <div class="catalogue">
         <!-- iterating through all restaurants in the catalogue and displaying them-->
         {% for i in catalogue %}
-            <div class={{i[2]}} rating={{i[9]}}> <!-- invisible div used in the filtering system with javascript -->
+            <div class="cardcontainer"category={{i[2]}} rating={{i[9]}} cardname="{{i[1]}}"> <!-- invisible div used in the filtering system with javascript -->
             <div class="card">
             <div class="imgcontainer"><img src="static/images/{{images[i[0]][1]}}.png"></div> <!-- adding the respective image to the card -->
                 <p style="text-align: center; font-weight: 600; font-size: 1.25vw; margin: 1vw;">{{i[1]}}</p> <!-- adding the restaurant name to the card -->
@@ -42,8 +42,9 @@
         {%endfor%}
     </div>
     <!-- the filter part of the catalogue view -->
-    <div style="font-size: 2vw; border: 2px solid #777; border-top: none; border-bottom:none; color: #000; text-align: center; padding-top: 2vw;">
+    <div style="font-size: 2vw; border: 2px solid #777; border-top: none; border-bottom:none; color: inherit; text-align: center; padding-top: 2vw;">
         FILTER
+        <input type="text" id="search" oninput="search()" style="width: 20vw; margin-top: 3vw; height: 2vw; border-radius: 5px; border: 1px solid black; font: inherit; font-size: 1.5vw;">
         <div style="margin-top: 3vw; text-align: left; margin-left: 4vw;"><p style="font-size: 1.5vw;  margin-bottom: -1.5vw;">CUISINES</p><br>
             <!-- checkboxes that are linked to the javascript found in this file using an onclick function -->
             <input type="checkbox" id="Korean" onclick="updatecatalogue()" checked><label style="font-size: 1vw;"> Korean</label><br>
@@ -74,97 +75,52 @@
 
 <script>
     // updating the contents of the catalogue when the minrating slider is changed
+    function search() {
+        [...document.querySelectorAll("[cardname]")].forEach(card=>{
+            if (card.getAttribute("cardname").toLowerCase().includes(document.getElementById("search").value.toLowerCase()) && card.getAttribute("rating")>=document.getElementById("minrating").value/10 && card.getAttribute("rating")<=document.getElementById("maxrating").value/10 && document.getElementById(card.getAttribute("category")).checked) {
+                card.style.display="block";
+            }
+            else {
+                card.style.display="none";
+            }
+        })
+    }
     document.getElementById("minrating").oninput = (f=>{
         document.getElementById("minratingtext").innerHTML=" MIN: " + (document.getElementById("minrating").value/10); //updating the text next to the slider
         // iterating through every element that contains an attribute "rating"
-        [...document.querySelectorAll("[rating]")].forEach(x=>{ //from https://stackoverflow.com/questions/15843581/how-to-correctly-iterate-through-getelementsbyclassname
+        [...document.querySelectorAll("[rating]")].forEach(card=>{ //from https://stackoverflow.com/questions/15843581/how-to-correctly-iterate-through-getelementsbyclassname
             // checking if the card fulfils the filter's conditions
-            if (x.getAttribute("rating")>=document.getElementById("minrating").value/10 && x.getAttribute("rating")<=document.getElementById("maxrating").value/10 && document.getElementById(x.className).checked) {
-                    x.style.display = "block"; //display the card
+            if (card.getAttribute("cardname").toLowerCase().includes(document.getElementById("search").value.toLowerCase()) && card.getAttribute("rating")>=document.getElementById("minrating").value/10 && card.getAttribute("rating")<=document.getElementById("maxrating").value/10 && document.getElementById(card.getAttribute("category")).checked) {
+                    card.style.display = "block"; //display the card
             }
             else {
-                x.style.display = "none"; //dont display the card
+                card.style.display = "none"; //dont display the card
             }
         })
     })
     //same as above, but for the maxrating slider and text value
     document.getElementById("maxrating").oninput = (f=>{
         document.getElementById("maxratingtext").innerHTML=" MAX: " + (document.getElementById("maxrating").value/10);
-        [...document.querySelectorAll("[rating]")].forEach(y=>{
-            if (y.getAttribute("rating")<=document.getElementById("maxrating").value/10 && y.getAttribute("rating")>=document.getElementById("minrating").value/10 && document.getElementById(y.className).checked) {
-                y.style.display = "block";
+        [...document.querySelectorAll("[rating]")].forEach(card=>{
+            if (card.getAttribute("cardname").toLowerCase().includes(document.getElementById("search").value.toLowerCase()) && card.getAttribute("rating")>=document.getElementById("minrating").value/10 && card.getAttribute("rating")<=document.getElementById("maxrating").value/10 && document.getElementById(card.getAttribute("category")).checked) {
+                card.style.display = "block";
             }
             else {
-                y.style.display = "none";
+                card.style.display = "none";
             }
         })
     })
     
     // function used when checkboxes are changed
     function updatecatalogue() {
-        if (document.getElementById("Korean").checked) { // if the "Korean" checkbox is ticked
-            [...document.getElementsByClassName("Korean")].forEach(i=>  { // iterating through all elements with the class "Korean"
-                // checking if the card meets the filter's restrictions
-                if (i.getAttribute("rating")<=document.getElementById("maxrating").value/10 && i.getAttribute("rating")>=document.getElementById("minrating").value/10) {
-                i.style.display = "block"; // display the card
+        [...document.getElementsByClassName("cardcontainer")].forEach(card=>  { // iterating through all elements with the class
+            // checking if the card meets the filter's restrictions
+            if (card.getAttribute("cardname").toLowerCase().includes(document.getElementById("search").value.toLowerCase()) && card.getAttribute("rating")>=document.getElementById("minrating").value/10 && card.getAttribute("rating")<=document.getElementById("maxrating").value/10 && document.getElementById(card.getAttribute("category")).checked) {
+                card.style.display = "block"; // display the card
             }
             else {
-                i.style.display = "none"; // dont display the card
+                card.style.display = "none"; // dont display the card
             }
-            })
-        }
-        else{ // if the checkbox becomes unticked, dont display all elements with the class "Korean"
-            [...document.getElementsByClassName("Korean")].forEach(i=>  {
-                i.style.display = "none";
-            })
-        }
-        // ---The rest are the same as above, but with the different cuisine names--- 
-        if (document.getElementById("Italian").checked) {
-            [...document.getElementsByClassName("Italian")].forEach(i=>  {
-                if (i.getAttribute("rating")<=document.getElementById("maxrating").value/10 && i.getAttribute("rating")>=document.getElementById("minrating").value/10) {
-                i.style.display = "block";
-            }
-            else {
-                i.style.display = "none";
-            }
-            })
-        }
-        else{
-            [...document.getElementsByClassName("Italian")].forEach(i=>  {
-                i.style.display = "none";
-            })
-        }
-        if (document.getElementById("Chinese").checked) {
-            //from https://stackoverflow.com/questions/15843581/how-to-correctly-iterate-through-getelementsbyclassname
-            [...document.getElementsByClassName("Chinese")].forEach(i=>  {
-                if (i.getAttribute("rating")<=document.getElementById("maxrating").value/10 && i.getAttribute("rating")>=document.getElementById("minrating").value/10) {
-                i.style.display = "block";
-            }
-            else {
-                i.style.display = "none";
-            }
-            })
-        }
-        else{
-            [...document.getElementsByClassName("Chinese")].forEach(i=>  {
-                i.style.display = "none";
-            })
-        }
-        if (document.getElementById("Thai").checked) {
-            //from https://stackoverflow.com/questions/15843581/how-to-correctly-iterate-through-getelementsbyclassname
-            [...document.getElementsByClassName("Thai")].forEach(i=>  {
-                if (i.getAttribute("rating")<=document.getElementById("maxrating").value/10 && i.getAttribute("rating")>=document.getElementById("minrating").value/10) {
-                i.style.display = "block";
-            }
-            else {
-                i.style.display = "none";
-            }
-            })
-        }
-        else{
-            [...document.getElementsByClassName("Thai")].forEach(i=>  {
-                i.style.display = "none";
-            })
-        }
+        })
     }
 </script>
